--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,18 +1,19 @@
-<!-- This is one possible solution -->
-<h1>It's My Birthday!</h1>
-<h2>On the 12th May</h2>
+<h1>Happy Birthday To Me!</h1>
+<h2>When?</h2>
+<h3> August 30th</h3>
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-  alt="purple birthday cake with candles" />
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"/>
 
-<h3>What to bring:</h3>
-<ul>
-  <li>Baloons (I love baloons)</li>
-  <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
-</ul>
+<h3>Open Bar!</h3>
+    <ul>
+        <li>Macallan 12 (Whiskey)</li>
+        <li>Tito's Vodka</li>
+        <li>Mojitos</li>
+        <li>Margaritas</li>
+    </ul>
 
-<h3>This is where you need to go:</h3>
+<h3>Where?</h3>
+
 <a
-  href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
-  map link</a>
+    href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">
+    Here</a>
