--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h1>Top 3 Movies of All Time</h1>
+<h2>My opinion, obviously</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3>Toy Story</h3>
+    <p>Released: 1995<br />
+<h3>Monsters, Inc.</h3 >
+    <p>Released: 2001<br />
+<h3>John Wick</h3>
+    <p>Released: 2014<br />
